test/testdata/conformance/templates_testdata/http-filter-for-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: HttpFilter
metadata:
  name: http-filter-for-template
spec:
  - name: envoy.filters.http.router
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
