test/testdata/conformance/templates_testdata/listener-for-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: listener-for-template
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  name: listener-for-template
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10443
  listener_filters:
    - name: "envoy.filters.listener.tls_inspector"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
