test/testdata/conformance/templates_testdata/route-for-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: route-for-template
spec:
  - name: static
    match:
      path: "/static.json"
    direct_response:
      status: 200
      body: 
        inline_string: "{\"answer\":\"true\"}"
