test/testdata/conformance/templates_testdata/virtual-service-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: virtual-service-template
spec:
  listener:
    name: listener-for-template
  accessLogConfig:
    name: alc-for-template
  additionalHttpFilters:
    - name: http-filter-for-template
  additionalRoutes:
    - name: route-for-template
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    name: test
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"answer\":\"true\"}"
